--- a/css/styles.css
+++ b/css/styles.css
@@ -8247,7 +8247,6 @@ fieldset:disabled .btn {
   background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
 }
 
-
 .bg-black {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-black-rgb), var(--bs-bg-opacity)) !important;
@@ -11749,4 +11748,95 @@ fieldset {
 
 #notify li {
   margin: 20px;
+}
+
+.star-input > .input,
+.star-input > .input > label:hover,
+.star-input > .input > input:focus + label,
+.star-input > .input > input:checked + label {
+  display: inline-block;
+  vertical-align: middle;
+  background: url('../images/grade_img.png') no-repeat;
+}
+.star-input {
+  width: 100%;
+  text-align: left;
+  padding-right: 10px;
+}
+.score {
+  font-size: 18px;
+  line-height: 25px;
+  color: #ffc107;
+  font-weight: bold;
+  text-align: center;
+}
+.star-input > .input {
+  display: inline-block;
+  width: 150px;
+  background-size: 150px;
+  height: 28px;
+  white-space: nowrap;
+  overflow: hidden;
+  position: relative;
+}
+.star-input > .input > input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  opacity: 0;
+}
+star-input > .input.focus {
+  outline: 1px dotted #ddd;
+}
+.star-input > .input > label {
+  width: 30px;
+  height: 0;
+  padding: 28px 0 0 0;
+  overflow: hidden;
+  float: left;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.star-input > .input > label:hover,
+.star-input > .input > input:focus + label,
+.star-input > .input > input:checked + label {
+  background-size: 150px;
+  background-position: 0 bottom;
+}
+.star-input > .input > label:hover ~ label {
+  background-image: none;
+}
+
+.star-input > .input > label[for='p1'] {
+  width: 30px;
+  z-index: 9;
+}
+
+.star-input > .input > label[for='p2'] {
+  width: 60px;
+  z-index: 7;
+}
+
+.star-input > .input > label[for='p3'] {
+  width: 90px;
+  z-index: 5;
+}
+
+.star-input > .input > label[for='p4'] {
+  width: 120px;
+  z-index: 3;
+}
+
+.star-input > .input > label[for='p5'] {
+  width: 150px;
+  z-index: 1;
+}
+.star-input > output {
+  display: inline-block;
+  width: 60px;
+  font-size: 18px;
+  text-align: right;
+  vertical-align: middle;
 }
