--- a/css/styles.css
+++ b/css/styles.css
@@ -4897,7 +4897,8 @@ fieldset:disabled .btn {
 .card-img,
 .card-img-top,
 .card-img-bottom {
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .card-img,
@@ -11857,4 +11858,25 @@ ul.none {
 
 ul.block {
   display: block;
+}
+
+.card-size {
+  height: 200px;
+  width: 450px;
+}
+
+.file-list {
+  height: 150px;
+  overflow: auto;
+  border: 1px solid #989898;
+  padding: 10px;
+}
+.file-list .filebox p {
+  font-size: 14px;
+  margin-top: 10px;
+  display: inline-block;
+}
+.file-list .filebox .delete i {
+  color: #ff5353;
+  margin-left: 5px;
 }
