20220503 상품상세 api 연결

--- a/css/styles.css
+++ b/css/styles.css
@@ -11880,3 +11880,11 @@ ul.block {
   color: #ff5353;
   margin-left: 5px;
 }
+
+.detail-image-size {
+  height: 65vh;
+}
+
+.detail-productInfo {
+  height: 55.5vh;
+}
