20220525 후기 작성, 채팅 버그 수정

--- a/css/styles.css
+++ b/css/styles.css
@@ -11928,3 +11928,10 @@ ul.block {
 .item_delete:hover {
   color: red;
 }
+
+.salesScroll {
+  display: flex;
+  flex-direction: column;
+  max-height: 400px;
+  overflow-y: scroll;
+}
