--- a/css/styles.css
+++ b/css/styles.css
@@ -4804,8 +4804,12 @@ fieldset:disabled .btn {
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem;
+  /* border: 1px solid rgba(0, 0, 0, 0.125); */
+  /* border-radius: 0.5rem; */
+}
+
+.card:hover {
+  border: 2px solid var(--bs-gray-200);
 }
 
 .card > hr {
@@ -5631,7 +5635,7 @@ fieldset:disabled .btn {
 
 .list-group-item-info {
   color: #055160;
-  background-color: #cff4fc;
+  background-color: lightblue;
 }
 .list-group-item-info.list-group-item-action:hover,
 .list-group-item-info.list-group-item-action:focus {
@@ -7767,6 +7771,9 @@ fieldset:disabled .btn {
   margin-bottom: 2.5rem !important;
 }
 
+.mb-7 {
+  margin-bottom: 4rem !important;
+}
 .mb-auto {
   margin-bottom: auto !important;
 }
@@ -7859,6 +7866,11 @@ fieldset:disabled .btn {
 .px-5 {
   padding-right: 3rem !important;
   padding-left: 3rem !important;
+}
+
+.px-6 {
+  padding-right: 2.7rem !important;
+  padding-left: 2.7rem !important;
 }
 
 .py-0 {
@@ -11949,11 +11961,22 @@ ul.block {
 
 #detailInfo > thead > tr > td:nth-child(1),
 #detailInfo > tbody > tr > td:nth-child(1) {
-  background-color: #f8f8f8;
+  background-color: var(--bs-gray-200);
   padding-left: 0.5rem;
 }
 
 #detailInfo > thead > tr > td:nth-child(2),
 #detailInfo > tbody > tr > td:nth-child(2) {
   padding-left: 1rem;
+}
+
+#detailInfo > thead > tr > td {
+  padding-top: 20px;
+}
+
+.alarmBtn {
+  color: blue;
+  background: transparent;
+  outline: none;
+  border: none;
 }
