20220530 카테고리 UI 수정

--- a/css/styles.css
+++ b/css/styles.css
@@ -7315,7 +7315,9 @@ fieldset:disabled .btn {
 .w-25 {
   width: 25% !important;
 }
-
+.w-35 {
+  width: 35% !important;
+}
 .w-40 {
   width: 40% !important;
 }
